# crossy_cars

./: .env.example  .gitattributes  .gitignore  BLENDER_MCP_GUIDE.md  CHANGELOG.md  CONDITION_ROTATION_PLAN.md  CREDITS.md  Cargo.toml  DEPLOYMENT.md  GAMEPLAY_AUDIT.md  IMPLEMENTATION_REPORT_CAMERA_TOUCH.md  IMPLEMENTATION_REPORT_SCORE_DURATION.md  LEADERBOARD_ARCHITECTURE.md  LICENSE  MOBILE_DRIFT_CONTROL_PLAN.md  MULTIPLAYER_PLAN.md  PLAN_WAVE2.md  PLAN_WAVE4.md  PLAN_WAVE5.md  PLAN_WAVE6.md  POND_EXPANSION_PLAN.md  PRODUCTION_VERIFICATION.md  README.md  RESTART_PLAN.md  SCORE_VALIDATION_V2_PLAN.md  SEAMLESS_TILE_BLENDING_PLAN.md  Trunk.toml  WORLD_GENERATION_PLAN.md  index.html  production-gate-evidence.template.json
.github/workflows/: ci.yml  deploy-cloudflare-leaderboard.yml  deploy-cloudflare-pages.yml
assets/models/: car_concept_final.glb
assets/models/traffic/toy/: audit.json  manifest.json  npc_toy_city_van.glb  npc_toy_hatchback.glb  npc_toy_pickup.glb  npc_toy_sedan.glb  npc_toy_suv.glb
assets/shaders/: car_paint.wgsl  glow_button.wgsl  hazard_stripes.wgsl  menu_card.wgsl  menu_vignette.wgsl  sky.wgsl  water.wgsl
assets/textures/pbr_detail/: manifest.json
crates/roady-score-rules/: Cargo.toml
crates/roady-score-rules/examples/: generate.rs  generate_v2.rs  generate_v3.rs
crates/roady-score-rules/src/: lib.rs  v2.rs  v3.rs
crates/roady-score-rules/tests/: golden.rs  golden_v2.rs  golden_v3.rs
docs/: APPROVED_GAMEPLAY_MODES_CONTRACT.md  NPC_TOY_CAR_ASSET_TODO.md  RULES_V3_DROWNED_PROTOCOL_ADDENDUM.md  STARTUP_PERFORMANCE_AUDIT.md  WORLD_ASSET_TODO.md  frozen-v1-v2-baseline.sha256.json
leaderboard/: .dev.vars.example  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
leaderboard/migrations/: 0001_init.sql  0002_indexes.sql  0003_deterministic_ranking_indexes.sql  0004_admin_restorations.sql  0005_ranked_v2.sql  0006_ranked_v3.sql
leaderboard/scripts/: generate-frozen-v1-v2.mjs  test-d1-restoration.mjs  test-d1-v3.mjs  test-workerd.mjs  verify-frozen-v1-v2.mjs  verify-production.mjs  verify-remote-v3.mjs
leaderboard/src/: index.ts  replay-v3.ts  responses.ts  rules-v2.ts  rules-v3.ts  security.ts  svg.ts  v3.ts  validation.ts
leaderboard/test/: helpers.ts  index.test.ts  replay-v3.test.ts  routes.test.ts  rules-v2.test.ts  rules-v3.test.ts  svg.test.ts  v3-routes.test.ts
rules/: roady-rules.v1.json  roady-rules.v1.schema.json  roady-rules.v2.golden.json  roady-rules.v2.json  roady-rules.v2.schema.json  roady-rules.v3.golden.json  roady-rules.v3.json  roady-rules.v3.schema.json
src/: audio.rs  camera.rs  car.rs  chickens.rs  combos.rs  competitive_v3.rs  countdown.rs  critters.rs  difficulty.rs  drowned.rs  effects.rs  game_modes.rs  health.rs  leaderboard.rs  ledger.rs  main.rs  menu.rs  microtexture_review.rs  minimap.rs  modifiers.rs  objectives.rs  palette.rs  pbr_detail_constants.rs  persist.rs  pickups.rs  readiness.rs  right_of_way.rs  rotation.rs  round_intro.rs  run_events.rs  settings.rs  shaders.rs  textures.rs  touch.rs  toy_shading.rs  transparency.rs  ui.rs  world.rs
src/game/: events.rs  mod.rs  resources.rs  state.rs
tools/: archive_v1_leaderboard.py  browser_audit.py  browser_menu_scenarios.py  browser_scenarios.py  browser_settings_scenarios.py  browser_touch_scenarios.py  browser_turnstile_bridge.py  browser_v3_fixture.py  build_pbr_details.py  car_review_capture.py  check_release.py  generate_audio.py  load_env.ps1  map_review_capture.py  microtexture_review_capture.py  pond_review_capture.py  screenshot.py  test_browser_request_failures.py  test_build_pbr_details.py  test_microtexture_review_capture.py
(+31 files in other folders)
