[package]
name = "car_game_ai"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
bevy = { version = "0.19", features = ["webgl2", "wav"] }
# Used directly by `persist.rs` for localStorage on web. Version MUST match the
# one Bevy 0.19 pulls transitively (see Cargo.lock) to avoid duplicate crates.
# Currently Bevy 0.19 -> web-sys 0.3.103.
web-sys = { version = "0.3.103", features = ["Window", "Storage"] }

# Fast-ish dev builds, decent runtime.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

# Smaller wasm for web releases. Use Trunk release-mode processing (wasm-opt
# and minification) plus this profile: `trunk build --release --cargo-profile wasm-release`.
# Cargo-only equivalent: `cargo build --profile wasm-release --target wasm32-unknown-unknown`.
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
panic = "abort"
strip = "debuginfo"
