[package]
name = "car_game_ai"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
bevy = { version = "0.19", features = ["webgl2", "wav"] }
# Used directly for web persistence/browser APIs in `persist.rs`,
# `settings.rs`, and the leaderboard client. Version MUST match the one Bevy
# 0.19 pulls transitively (see Cargo.lock) to avoid duplicate crates.
# Currently Bevy 0.19 -> web-sys 0.3.103.
web-sys = { version = "0.3.103", features = [
    "Window", "Document", "Element", "Storage", "MediaQueryList",
    # Leaderboard fetch (architecture §12): raw web-sys bindings instead of
    # reqwest to preserve WASM size.
    "Headers", "Request", "RequestInit", "Response",
    "AbortController", "AbortSignal",
] }

# JSON (de)serialization for leaderboard API responses and request bodies.
# Both are already in Bevy's dependency tree, so this does not grow the WASM.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Fast-ish dev builds, decent runtime.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

# Smaller wasm for web releases. Use Trunk release-mode processing (wasm-opt
# and minification) plus this profile: `trunk build --release --cargo-profile wasm-release`.
# Cargo-only equivalent: `cargo build --profile wasm-release --target wasm32-unknown-unknown`.
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
panic = "abort"
strip = "debuginfo"

# Web-only async bridge for leaderboard fetch / Turnstile / WebCrypto.
# These are already transitive dependencies of web-sys; listing them
# explicitly lets `leaderboard.rs` call the JS bridge and await Promises.
[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
